<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Titles -->
    <string name="app_name">Wallet</string>
    <string name="title_activity_login">Login</string>
    <string name="title_category_fragment">Category</string>
    <string name="title_dashboard_fragment">Dashboard</string>
    <string name="title_movement_fragment">Movement</string>
    <string name="title_all_movements_fragment">Las Movements</string>
    <string name="title_activity_view_category">Category</string>
    <string name="title_activity_new_category">New Category</string>
    <string name="title_activity_view_movement">Movement</string>
    <string name="title_activity_edit_movement">EditMovementActivity</string>
    <string name="title_debt_fragment">Debt</string>
    <string name="title_activity_signin">Sign In</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_movement_fragment_capture_image">Add Image</string>
    <string name="action_view_category_activity_add">Add Category</string>
    <string name="action_view_category_activity_edit">Edit Category</string>
    <string name="action_view_movement_edit">Edit Movement</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- Codes -->
    <string name="preferences_credentials">com.flores.nico.utils.CREDENTIALS_PREFERENCES</string>
    <string name="code_user_email">com.flores.nico.wallet.USER_EMAIL</string>
    <string name="code_user_password">com.flores.nico.wallet.USER_PASSWORD</string>
    <string name="code_user_first_name">com.flores.nico.wallet.USER_FIRST_NAME</string>
    <string name="code_user_last_name">com.flores.nico.wallet.USER_FIRST_NAME</string>
    <string name="code_user_id">com.flores.nico.wallet.USER_ID</string>
    <string name="code_no_user_signed_in">com.flores.nico.wallet.NO_USER</string>
    <string name="code_no_categories_present">com.flores.nico.utils.NO_CATEGORIES</string>
    <string name="code_categories_present">com.flores.nico.utils.CATEGORIES</string>

    <!-- Toast -->
    <string name="toast_login_activity_login_successfully">Login successfully</string>
    <string name="toast_login_activity_invalid_email">Invalid E-mail</string>
    <string name="toast_login_activity_invalid_password">Invalid Password</string>
    <string name="toast_movement_fragment_movement_saved">Movement correctly saved</string>
    <string name="toast_movement_fragment_movement_error">Please provide an amount</string>
    <string name="toast_movement_fragment_image_not_captured">Image not captured</string>
    <string name="toast_movement_fragment_image_error">Something went wrong</string>
    <string name="toast_movement_fragment_camera_error">Error taking picture</string>
    <string name="toast_movement_fragment_image_captured">Image saved</string>
    <string name="toast_category_fragment_category_saved">Category correctly saved</string>
    <string name="toast_category_fragment_category_error">Please provide a name</string>
    <string name="toast_edit_movement_activity_successful_update">Movement correctly
        updated</string>
    <string name="toast_debt_fragment_debt_saved">Debt saved</string>
    <string name="toast_debt_fragment_debt_error">Please provide an amount and receiver</string>
    <string name="toast_sign_in_activity_sign_in_successfully">Sign in successfully</string>
    <string name="toast_sign_in_activity_invalid_fields">Please fill all the fields</string>
    <string name="toast_sign_in_activity_sign_in_error">There was a problem singing in</string>
    <string name="toast_login_activity_login_error">There was a problem logging in</string>
    <string name="toast_progress_dialog_loading">loading…</string>

    <!-- Views Text -->
    <string name="login_activity_bt_login">Log In</string>
    <string name="login_activity_tv_email">E-mail</string>
    <string name="login_activity_tv_password">Password</string>
    <string name="movement_fragment_tv_amount">Movement Amount</string>
    <string name="movement_fragment_tv_type">Movement Type</string>
    <string name="movement_fragment_tv_category">Movement Category</string>
    <string name="movement_fragment_tv_date">Date</string>
    <string name="movement_fragment_tv_description">Description</string>
    <string name="movement_fragment_btn_save">Save</string>
    <string name="all_movements_fragment_tv_account_balance">Account Balance</string>
    <string name="dashboard_fragment_tv_account_income">Account Income</string>
    <string name="dashboard_fragment_tv_account_outcome">Account Outcome</string>
    <string name="edit_category_activity_tv_name">Category Name</string>
    <string name="edit_category_activity_tv_description">Category Description</string>
    <string name="debt_fragment_tv_amount">Amount</string>
    <string name="debt_fragment_tv_receiver">Receiver</string>
    <string name="debt_fragment_tv_reminder">Reminder</string>
    <string name="debt_fragment_tv_description">Description</string>
    <string name="debt_fragment_btn_save">Save</string>
    <string name="sign_in_activity_tv_first_name">First Name</string>
    <string name="sign_in_activity_tv_last_name">Last Name</string>
    <string name="sign_in_activity_btn_sign_in">Sign In</string>

</resources>
