<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.flores.nico.wallet.MovementFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_fragment_tv_amount"
            android:textStyle="bold"
            android:textSize="20sp"
            android:labelFor="@+id/editMovementActivityInputAmount"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editMovementActivityInputAmount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_fragment_tv_category"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMovementActivityInputCategory"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_fragment_tv_type"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMovementActivityInputType"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_fragment_tv_date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/editMovementActivityInputDatePicker"/>
        <EditText
            android:id="@+id/editMovementActivityInputDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movement_fragment_tv_description"
            android:textStyle="bold"
            android:textSize="20sp"
            android:labelFor="@+id/editMovementActivityInputDescription"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text|textAutoCorrect|textMultiLine|textCapSentences"
            android:lines="5"
            android:ems="10"
            android:id="@+id/editMovementActivityInputDescription"/>

        <Button
            android:id="@+id/editMovementActivityBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/movement_fragment_btn_save"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>
