<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.flores.nico.wallet.EditCategory"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:labelFor="@+id/editCategoryActivityInputName"
        android:text="@string/edit_category_activity_tv_name" />
    <EditText
        android:id="@+id/editCategoryActivityInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:labelFor="@+id/editCategoryActivityInputDescription"
        android:layout_marginTop="10dp"
        android:text="@string/edit_category_activity_tv_description"/>
    <EditText
        android:id="@+id/editCategoryActivityInputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect|textMultiLine"
        android:lines="5"/>

    <Button
        android:id="@+id/editCategoryActivityBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/movement_fragment_btn_save"
        android:layout_marginTop="10dp"/>

</LinearLayout>
