<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.flores.nico.wallet.SignInActivity">

    <TextView
        android:id="@+id/signInActivityFirstNamTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:labelFor="@+id/signInActivityInputFirstName"
        android:text="@string/sign_in_activity_tv_first_name"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signInActivityInputFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/signInActivityFirstNamTv"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/signInActivityLastNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signInActivityInputFirstName"
        android:labelFor="@+id/signInActivityInputLastName"
        android:text="@string/sign_in_activity_tv_last_name"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signInActivityInputLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/signInActivityLastNameTv"
        android:layout_toEndOf="@+id/signInActivityLastNameTv"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signInActivityInputLastName"
        android:labelFor="@+id/signInActivityInputEmail"
        android:text="@string/login_activity_tv_email"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signInActivityInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/signInActivityInputLastName"
        android:layout_below="@+id/signInActivityInputLastName"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/signInActivityInputEmail"
        android:labelFor="@+id/signInActivityInputPassword"
        android:text="@string/login_activity_tv_password"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signInActivityInputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/signInActivityInputEmail"
        android:layout_below="@+id/signInActivityInputEmail"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signInActivityBtnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signInActivityInputPassword"
        android:layout_below="@+id/signInActivityInputPassword"
        android:onClick="signInActivitySignIn"
        android:text="@string/sign_in_activity_btn_sign_in"/>

</RelativeLayout>
