<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.flores.nico.wallet.LoginActivity">

    <LinearLayout
        android:id="@+id/loginActivityLlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/loginActivityInputEmail"
            android:text="@string/login_activity_tv_email"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/loginActivityInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginActivityLlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginActivityLlEmail"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/loginActivityInputPassword"
            android:text="@string/login_activity_tv_password"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/loginActivityInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginActivityBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginActivityLlPassword"
        android:layout_below="@+id/loginActivityLlPassword"
        android:layout_marginTop="10dp"
        android:onClick="loginActivityLogin"
        android:text="@string/login_activity_bt_login"/>

    <Button
        android:id="@+id/loginActivityBtnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/loginActivityBtnLogin"
        android:onClick="loginActivitySignin"
        android:text="@string/signin_activity_btn_signin"/>

</RelativeLayout>
