<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.flores.nico.wallet.DashboardFragment"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_movements_fragment_tv_account_balance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_column="0"
            android:layout_row="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:id="@+id/dashboardFragmentTvBalance"
            android:layout_column="2"
            android:layout_row="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_fragment_tv_account_income"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_column="0"
            android:layout_row="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:id="@+id/dashboardFragmentTvIncome"
            android:layout_column="2"
            android:layout_row="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_fragment_tv_account_outcome"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_column="0"
            android:layout_row="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:id="@+id/dashboardFragmentTvOutcome"
            android:layout_column="2"
            android:layout_row="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </GridLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/dashboardFragmentLvLastMovements"
        android:layout_weight="1"/>
</LinearLayout>
